--- a/Week2/index.html
+++ b/Week2/index.html
@@ -15,11 +15,13 @@
     <header>
       <h1 class="headeraH1">Wanderlust Voyages | Travel Agency</h1>
     </header>
+  </div>
+  <div>
 
     <!-- Navigation Section -->
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="currentPage" >Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="gallery.html">Gallery</a></li>
